# hevy-coach

./: .gitignore
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 614f1a999a92_create_workouts_and_workout_sets.py  72aaaadaad77_create_science_corpus.py
backend/app/: main.py
backend/app/adapters/: hevy_csv_adapter.py
backend/app/api/routers/: auth.py  health.py  ingest.py  metrics.py
backend/app/core/: config.py  db.py  security.py
backend/app/domain/: metrics.py  models.py  rag.py
backend/app/domain/muscle_map/: __init__.py  matching.py  models.py  resolver.py  seed_data.py
backend/app/domain/muscle_map/data/: free_exercise_db.json
backend/app/interfaces/: embedding.py  llm.py  vector_repo.py  workout_source.py
backend/app/repositories/: corpus_repo.py  models.py  workout_repo.py
backend/app/services/: ingestion_service.py  metrics_service.py
backend/tests/: conftest.py
backend/tests/fixtures/: hevy_sample.csv
backend/tests/integration/: test_auth.py  test_corpus_repo.py  test_health_db.py  test_ingest.py  test_metrics_api.py
backend/tests/unit/: test_hevy_csv_adapter.py  test_metrics.py  test_muscle_map.py
